--- a/harithmapos/templates/error/403.html
+++ b/harithmapos/templates/error/403.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'layout/base.html' %}
 {% block title %} Error {% endblock %}
 {% block body %}
 <div class="container mt-4">
