--- a/harithmapos/templates/item.html
+++ b/harithmapos/templates/item.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'layout/base.html' %}
 {% block title %} Home {% endblock %}
 {% block body %} 
     <div class="container mt-4">
