--- a/harithmapos/templates/user/register.html
+++ b/harithmapos/templates/user/register.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'layout/base.html' %}
 {% block body %}
 <div class="container mt-4">
     <div class="row justify-content-center">
