--- a/harithmapos/templates/layout/base.html
+++ b/harithmapos/templates/layout/base.html
@@ -7,6 +7,7 @@
         
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css'>
         <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
         {% include 'layout/navbar.html' %}
     </head>
