--- a/harithmapos/templates/layout/navbar.html
+++ b/harithmapos/templates/layout/navbar.html
@@ -5,6 +5,7 @@
         </a>
         <ul class="navbar-nav">
             {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" href="{{ url_for('invoice_head_blueprint.invoice_head') }}">Invoice</a>
                 <a class="nav-item nav-link" href="{{ url_for('item_blueprint.item') }}">Item</a>
                 <a class="nav-item nav-link" href="{{ url_for('customer_blueprint.customer') }}">Customer</a>
                 <a class="nav-item nav-link" href="{{ url_for('supplier_blueprint.supplier') }}">Supplier</a>
