added invoice head

--- a/harithmapos/templates/test1.html
+++ b/harithmapos/templates/test1.html
@@ -1,42 +1,48 @@
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
-
-<div class="row">
-    <ol class="show-grid col-md-8 col-md-offset-2">
-          <li class="col-md-4 active">
-           <div class="media">
-              <div class="pull-left" href="#">
-                <span class="glyphicon glyphicon-user"></span>
-              </div>
-            <div class="media-body">
-                <h5 class="media-heading"><strong>Step 1:</strong></h5>
-                Company Sign Up
-            </div>
+{% extends 'layout/base.html' %}
+{% block title %} Home {% endblock %}
+{% block body %}
+<form>
+  <div class="form-row">
+    <div class="col-md-4 mb-3">
+      <label for="validationDefault01">First name</label>
+      <input type="text" class="form-control" id="validationDefault01" placeholder="First name" value="Mark" required>
+    </div>
+    <div class="col-md-4 mb-3">
+      <label for="validationDefault02">Last name</label>
+      <input type="text" class="form-control" id="validationDefault02" placeholder="Last name" value="Otto" required>
+    </div>
+    <div class="col-md-4 mb-3">
+      <label for="validationDefaultUsername">Username</label>
+      <div class="input-group">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="inputGroupPrepend2">@</span>
         </div>
-          </li>
-          <li class="col-md-4 inactive">
-          <div class="media">
-              <div class="pull-left" href="#">
-                <span class="glyphicon glyphicon-book"></span>
-              </div>
-            <div class="media-body">
-                <h5 class="media-heading"><strong>Step 2:</strong></h5>
-                Choose your plan
-            </div>
-        </div>
-          </li>
-          <li class="col-md-4 inactive">
-           <div class="media">
-              <div class="pull-left" href="#">
-                <span class="glyphicon glyphicon-dashboard"></span>
-              </div>
-            <div class="media-body">
-                <h5 class="media-heading"><strong>Step 3:</strong></h5>
-                Go to your dashboard
-            </div>
-        </div>
-          </li>
-    </ol>
-</div>
+        <input type="text" class="form-control" id="validationDefaultUsername" placeholder="Username" aria-describedby="inputGroupPrepend2" required>
+      </div>
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="col-md-6 mb-3">
+      <label for="validationDefault03">City</label>
+      <input type="text" class="form-control" id="validationDefault03" placeholder="City" required>
+    </div>
+    <div class="col-md-3 mb-3">
+      <label for="validationDefault04">State</label>
+      <input type="text" class="form-control" id="validationDefault04" placeholder="State" required>
+    </div>
+    <div class="col-md-3 mb-3">
+      <label for="validationDefault05">Zip</label>
+      <input type="text" class="form-control" id="validationDefault05" placeholder="Zip" required>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+      <label class="form-check-label" for="invalidCheck2">
+        Agree to terms and conditions
+      </label>
+    </div>
+  </div>
+  <button class="btn btn-primary" type="submit">Submit form</button>
+</form>
+{% endblock %}
