--- a/harithmapos/templates/test.html
+++ b/harithmapos/templates/test.html
@@ -38,9 +38,9 @@
             <td class="align-middle">624</td>
             <td class="align-middle">Dash cleaner</td>
             <td class="align-middle">
-              <a href="#" class="btn btn-outline-secondary"><i class="bi bi-plus-lg"></i></a>
+              <a href="#" class="btn btn-outline-secondary btn-sm"><i class="bi bi-plus-lg"></i></a>
               3
-              <a href="#" class="btn btn-outline-secondary"><i class="bi bi-dash-lg"></i></a>
+              <a href="#" class="btn btn-outline-secondary btn-sm"><i class="bi bi-dash-lg"></i></a>
             </td>
             <td class="align-middle">250</td>
             <td class="align-middle">750</td>
@@ -53,9 +53,9 @@
             <td class="align-middle">624</td>
             <td class="align-middle">Dash cleaner</td>
             <td class="align-middle">
-              <a href="#" class="btn btn-outline-secondary"><i class="bi bi-plus-lg"></i></a>
+              <a href="#" class="btn btn-outline-secondary btn-sm"><i class="bi bi-plus-lg"></i></a>
               3
-              <a href="#" class="btn btn-outline-secondary"><i class="bi bi-dash-lg"></i></a>
+              <a href="#" class="btn btn-outline-secondary btn-sm"><i class="bi bi-dash-lg"></i></a>
             </td>
             <td class="align-middle">250</td>
             <td class="align-middle">750</td>
@@ -68,9 +68,9 @@
             <td class="align-middle">624</td>
             <td class="align-middle">Dash cleaner</td>
             <td class="align-middle">
-              <a href="#" class="btn btn-outline-secondary"><i class="bi bi-plus-lg"></i></a>
+              <a href="#" class="btn btn-outline-secondary btn-sm"><i class="bi bi-plus-lg"></i></a>
               3
-              <a href="#" class="btn btn-outline-secondary"><i class="bi bi-dash-lg"></i></a>
+              <a href="#" class="btn btn-outline-secondary btn-sm"><i class="bi bi-dash-lg"></i></a>
             </td>
             <td class="align-middle">250</td>
             <td class="align-middle">750</td>
@@ -83,20 +83,81 @@
       </table>
     </div>
     <div class="col">
-      2 of 2
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      1 of 3
-    </div>
-    <div class="col">
-      2 of 3
-    </div>
-    <div class="col">
-      3 of 3
+      <div class="row">
+        <div class="col">
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Customer</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Disabled input" disabled>
+          </div>
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Vehical</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Current Milage</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+        </div>
+        <div class="col">
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Employee</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Wash Bay</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Next Milage</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Service Status</span>
+            <select class="form-select" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+              <option selected>Open this select menu</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col">
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Discount %</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+        </div>
+        <div class="col">
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Payment Method</span>
+            <select class="form-select" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+              <option selected>Open this select menu</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="input-group mb-3">
+            <span class="input-group-text" id="inputGroup-sizing-default">Payment Amount</span>
+            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+          </div>
+        </div>
+        <div class="col-auto">
+          <button type="submit" class="btn btn-primary mb-3">Update</button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
-
 {% endblock %}
