--- a/harithmapos/templates/test.html
+++ b/harithmapos/templates/test.html
@@ -1,163 +1,39 @@
-{% extends 'layout/base.html' %}
-{% block title %} Home {% endblock %}
-{% block body %}
+<!DOCTYPE html>
+<html lang="fa" dir="rtl">
 
-<div class="container mt-3">
-  <div class="row">
-    <div class="col">
-      <form action="">
-        <div class="input-group ">
-          <span class="input-group-text">Item</span>
-          <input class="form-control" list="ItemDatalistOptions" id="ItemDataList"
-            placeholder="Type to search Item...">
-          <datalist id="ItemDatalistOptions">
-            <option value="San Francisco">
-            <option value="New York">
-            <option value="Seattle">
-            <option value="Los Angeles">
-            <option value="Chicago">
-          </datalist>
-          <span class="input-group-text">Qty</span>
-          <input type="text" class="form-control" placeholder="1" aria-label="Server">
-          <button class="btn btn-primary">Add Item</button>
-        </div>
-      </form>
-      <table class="table table-success table-striped table-hover" border="1">
-        <thead class="thread-dark">
-          <tr>
-            <th scope="col">ID</th>
-            <th scope="col">Name</th>
-            <th scope="col">Quantity</th>
-            <th scope="col">Price</th>
-            <th scope="col">Total Price</th>
-            <th scope="col">Actions</th>
-          </tr>
-        </thead>
-        <tbody id="results">
-          <tr>
-            <td class="align-middle">624</td>
-            <td class="align-middle">Dash cleaner</td>
-            <td class="align-middle">
-              <a href="#" class="btn btn-outline-secondary btn-sm"><i class="bi bi-plus-lg"></i></a>
-              3
-              <a href="#" class="btn btn-outline-secondary btn-sm"><i class="bi bi-dash-lg"></i></a>
-            </td>
-            <td class="align-middle">250</td>
-            <td class="align-middle">750</td>
-            <td class="align-middle">
-              <a href="#" class="btn btn-danger" data-toggle="tooltip" data-placement="top" title="Delete supplier"
-                onclick="return confirm('Are you sure to delete?')"><i class="bi bi-trash3-fill"></i></a>
-            </td>
-          </tr>
-          <tr>
-            <td class="align-middle">624</td>
-            <td class="align-middle">Dash cleaner</td>
-            <td class="align-middle">
-              <a href="#" class="btn btn-outline-secondary btn-sm"><i class="bi bi-plus-lg"></i></a>
-              3
-              <a href="#" class="btn btn-outline-secondary btn-sm"><i class="bi bi-dash-lg"></i></a>
-            </td>
-            <td class="align-middle">250</td>
-            <td class="align-middle">750</td>
-            <td class="align-middle">
-              <a href="#" class="btn btn-danger" data-toggle="tooltip" data-placement="top" title="Delete supplier"
-                onclick="return confirm('Are you sure to delete?')"><i class="bi bi-trash3-fill"></i></a>
-            </td>
-          </tr>
-          <tr>
-            <td class="align-middle">624</td>
-            <td class="align-middle">Dash cleaner</td>
-            <td class="align-middle">
-              <a href="#" class="btn btn-outline-secondary btn-sm"><i class="bi bi-plus-lg"></i></a>
-              3
-              <a href="#" class="btn btn-outline-secondary btn-sm"><i class="bi bi-dash-lg"></i></a>
-            </td>
-            <td class="align-middle">250</td>
-            <td class="align-middle">750</td>
-            <td class="align-middle">
-              <a href="#" class="btn btn-danger" data-toggle="tooltip" data-placement="top" title="Delete supplier"
-                onclick="return confirm('Are you sure to delete?')"><i class="bi bi-trash3-fill"></i></a>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="col">
-      <div class="row">
-        <div class="col">
-          <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">Customer</span>
-            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default" placeholder="Disabled input" disabled>
-          </div>
-          <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">Vehical</span>
-            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-          </div>
-          <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">Current Milage</span>
-            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-          </div>
-        </div>
-        <div class="col">
-          <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">Employee</span>
-            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-          </div>
-          <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">Wash Bay</span>
-            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-          </div>
-          <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">Next Milage</span>
-            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">Service Status</span>
-            <select class="form-select" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-              <option selected>Open this select menu</option>
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
-            </select>
-          </div>
-        </div>
-      </div>
-      <hr>
-      <div class="row">
-        <div class="col">
-          <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">Discount %</span>
-            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-          </div>
-        </div>
-        <div class="col">
-          <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">Payment Method</span>
-            <select class="form-select" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-              <option selected>Open this select menu</option>
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
-            </select>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col">
-          <div class="input-group mb-3">
-            <span class="input-group-text" id="inputGroup-sizing-default">Payment Amount</span>
-            <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
-          </div>
-        </div>
-        <div class="col-auto">
-          <button type="submit" class="btn btn-primary mb-3">Update</button>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/css/bootstrap-select.min.css">
+  <title>Languages</title>
+</head>
+
+<body>
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-lg-6">
+        <div class="form-group">
+          <label for="lang">Language</label>
+          <select id="lang" name="lang" class="form-control">
+            <option value="1">English</option>
+            <option value="2">French</option>
+            <option value="3">Kiswahili</option>
+            <option value="3">Diné bizaad</option>
+            <option value="3">Oneida</option>
+          </select>
         </div>
       </div>
     </div>
   </div>
-</div>
-{% endblock %}
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/js/bootstrap-select.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/js/i18n/defaults-*.min.js"></script>
+  <script>
+    $('#lang').selectpicker();
+  </script>
+</body>
+
+</html>
