--- a/harithmapos/templates/layout/navbar.html
+++ b/harithmapos/templates/layout/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
         <a href="" class="navbar-brand">
-            <img src="{{url_for('static', filename='flasklogo.png')}}" width="100" height="50" class="d-inline-block align-text-top" alt="">
+            <img src="{{url_for('static', filename='Harithma-logo.png')}}" height="50" class="d-inline-block align-text-top" alt="">
         </a>
         <ul class="navbar-nav">
             {% if current_user.is_authenticated %}
