--- a/harithmapos/templates/layout/navbar.html
+++ b/harithmapos/templates/layout/navbar.html
@@ -3,28 +3,34 @@
         <a href="" class="navbar-brand">
             <img src="{{url_for('static', filename='Harithma-logo.png')}}" height="50" class="d-inline-block align-text-top" alt="">
         </a>
-        <ul class="navbar-nav">
-            {% if current_user.is_authenticated %}
-                <a class="nav-item nav-link" href="{{ url_for('invoice_head_blueprint.invoice_head') }}">Invoice</a>
-                <a class="nav-item nav-link" href="{{ url_for('item_blueprint.item') }}">Item</a>
-                <a class="nav-item nav-link" href="{{ url_for('customer_blueprint.customer') }}">Customer</a>
-                <a class="nav-item nav-link" href="{{ url_for('supplier_blueprint.supplier') }}">Supplier</a>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Other</a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="{{ url_for('employee_blueprint.employee') }}">Employee</a></li>
-                        <li><a class="dropdown-item" href="{{ url_for('washbay_blueprint.washbay') }}">Wash Bay</a></li>
-                        <!-- <li><a class="dropdown-item" href="#">Another action</a></li> -->
-                        <!-- <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li> -->
-                    </ul>
-                </li>
-                <a class="nav-item nav-link" href="{{ url_for('user_blueprint.account') }}">Account</a>
-                <a class="nav-item nav-link" href="{{ url_for('user_blueprint.logout') }}">Logout</a>
-            {% else %}
-                <a class="nav-item nav-link" href="{{ url_for('user_blueprint.login') }}">Login</a>
-                <a class="nav-item nav-link" href="{{ url_for('user_blueprint.register') }}">Register</a>
-            {% endif %}
-        </ul>
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav ms-auto">
+                {% if current_user.is_authenticated %}
+                    <a class="nav-item nav-link" href="{{ url_for('dashboard_blueprint.dashboard') }}">Dashboard</a>
+                    <a class="nav-item nav-link" href="{{ url_for('invoice_head_blueprint.invoice_head') }}">Invoice</a>
+                    <a class="nav-item nav-link" href="{{ url_for('item_blueprint.item') }}">Item</a>
+                    <a class="nav-item nav-link" href="{{ url_for('customer_blueprint.customer') }}">Customer</a>
+                    <a class="nav-item nav-link" href="{{ url_for('supplier_blueprint.supplier') }}">Supplier</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Other</a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{{ url_for('employee_blueprint.employee') }}">Employee</a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('washbay_blueprint.washbay') }}">Wash Bay</a></li>
+                            <!-- <li><a class="dropdown-item" href="#">Another action</a></li> -->
+                            <!-- <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li> -->
+                        </ul>
+                    </li>
+                    <a class="nav-item nav-link" href="{{ url_for('user_blueprint.account') }}">Account</a>
+                    <a class="nav-item nav-link" href="{{ url_for('user_blueprint.logout') }}">Logout</a>
+                {% else %}
+                    <a class="nav-item nav-link" href="{{ url_for('user_blueprint.login') }}">Login</a>
+                    <a class="nav-item nav-link" href="{{ url_for('user_blueprint.register') }}">Register</a>
+                {% endif %}
+            </ul>
+        </div>
     </div>
 </nav>
